--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -53,7 +53,7 @@ pipeline{
               echo 'Packaging worker app with docker'
               script{
                 docker.withRegistry('https://index.docker.io/v1/', 'dockerlogin') {
-                    def workerImage = docker.build("rajeswarikv9/worker:v${env.BUILD_ID}", "./worker")
+                    def workerImage = docker.build("rajeswarikv9/worker-aa:v${env.BUILD_ID}", "./worker")
                     workerImage.push()
                     workerImage.push("latest")
                 }
